# Impact-of-Asynchrony-on-MBEAs

./: README.md
EALib/: .clang-format  .clang-tidy  .gitignore  2023-01-03-traced-runs-examples.txt  README.md  conanfile.py  gcovr.cfg  install.sh  meson.build  meson_options.txt  pyproject.toml
EALib/doc/: conf.py.in  doxygen.ini.in  index.rst  meson.build  run_doxygen_sphinx.bat.in  run_doxygen_sphinx.sh.in
EALib/include/: acceptation_criteria.hpp  archive.hpp  base.hpp  cppassert.h  ecga.hpp  ga.hpp  gomea.hpp  initializers.hpp  kernelgomea.hpp  kernels.hpp  logging.hpp  problems.hpp  running.hpp  sim-ga.hpp  sim-gomea.hpp  sim.hpp  utilities.hpp
EALib/instances/: trap__l_100__k_5.txt  trap__l_50__k_5.txt
EALib/instances/bestoftraps/: origin.md
EALib/instances/maxcut/: origin.md
EALib/instances/nk/: adjacent_nk_optimum_finder.py  create_nk_instances.py
EALib/instances/nk/instances/n4_s1/L1280/: 1.txt  1.txt.opt  10.txt  10.txt.opt  10_vtr.txt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  3_vtr.txt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  6.txt.opt  6_vtr.txt  7.txt  7.txt.opt  7_vtr.txt  8.txt  8.txt.opt  8_vtr.txt  9.txt  9.txt.opt  9_vtr.txt
EALib/instances/nk/instances/n4_s1/L160/: 1.txt  1.txt.opt  10.txt  10.txt.opt  10_vtr.txt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  3_vtr.txt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  6.txt.opt  6_vtr.txt  7.txt  7.txt.opt  7_vtr.txt  8.txt  8.txt.opt  8_vtr.txt  9.txt  9.txt.opt  9_vtr.txt
EALib/instances/nk/instances/n4_s1/L20/: 1.txt  1.txt.opt  10.txt  10.txt.opt  10_vtr.txt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  6.txt.opt  6_vtr.txt  7.txt  7.txt.opt  7_vtr.txt  8.txt  8.txt.opt  8_vtr.txt  9.txt  9.txt.opt  9_vtr.txt
EALib/instances/nk/instances/n4_s1/L320/: 1.txt  1.txt.opt  10.txt  10.txt.opt  10_vtr.txt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  3_vtr.txt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  6.txt.opt  6_vtr.txt  7.txt  7.txt.opt  7_vtr.txt  8.txt  8.txt.opt  8_vtr.txt  9.txt  9.txt.opt  9_vtr.txt
EALib/instances/nk/instances/n4_s1/L40/: 1.txt  1.txt.opt  10.txt  10.txt.opt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  3_vtr.txt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  6.txt.opt  6_vtr.txt  7.txt  7.txt.opt  7_vtr.txt  8.txt  8.txt.opt  9.txt  9.txt.opt  9_vtr.txt
EALib/instances/nk/instances/n4_s1/L640/: 1.txt  1.txt.opt  10.txt  10.txt.opt  10_vtr.txt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  3_vtr.txt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  6.txt.opt  6_vtr.txt  7.txt  7.txt.opt  7_vtr.txt  8.txt  8.txt.opt  8_vtr.txt  9.txt  9.txt.opt  9_vtr.txt
EALib/instances/nk/instances/n4_s1/L80/: 1.txt  1.txt.opt  10.txt  10.txt.opt  10_vtr.txt  1_vtr.txt  2.txt  2.txt.opt  2_vtr.txt  3.txt  3.txt.opt  3_vtr.txt  4.txt  4.txt.opt  4_vtr.txt  5.txt  5.txt.opt  5_vtr.txt  6.txt  (+11 more)
EALib/python_examples/: example_ecga.py  example_ims.py  example_kernel_single_pop.py  example_mo_single_pop.py  example_scalarization_kernel_single_pop.py  example_single_pop.py  example_single_pop_logging.py  visualise_events.ipynb
EALib/src/: acceptation_criteria.cpp  archive.cpp  base.cpp  debughelpers.cpp  ecga.cpp  ga.cpp  gomea.cpp  initializers.cpp  kernels.cpp  logging.cpp  problems.cpp  python.cpp  running.cpp  sim-ga.cpp  sim-gomea.cpp  sim.cpp
EALib/src/python/: acceptation_criteria.cpp  archive.cpp  base.cpp  ecga.cpp  ga.cpp  gomea.cpp  initializers.cpp  logging.cpp  problems.cpp  pybindi.h  running.cpp  sim-ga.cpp  sim-gomea.cpp  sim.cpp  utilities.cpp
EALib/subprojects/: pybind11.wrap  trompeloeil.wrap
EALib/subprojects/packagefiles/pybind11-2.9.1/: meson.build
EALib/subprojects/packagefiles/trompeloeil-42/: meson.build
EALib/test/: main.cpp  mocks.hpp  mocks_base_ea.hpp  mocks_gomea.hpp  mocks_running.hpp  test_acceptation_criteria.cpp  test_archive.cpp  test_base.cpp  test_ecga.cpp  test_ga.cpp  test_gomea.cpp  test_initializers.cpp  test_problems.cpp  test_running.cpp  test_sim-gomea.cpp  test_sim.cpp  test_sim_ga.cpp  test_utilities.cpp
experiments/: .gitignore  2022-11-01-ecga-nasbench-nolim.py  2022-11-01-ga-nasbench-nolim.py  2022-11-01-gomea-nasbench-nolim.py  2022-11-02-sample-nasbench-points.py  2022-11-03-analyse-samples.ipynb  2022-11-04-ecga-nasbench-lim-timing.py  2022-11-04-ecga-nkl-lim-timing.py  2022-11-04-ecga-trap-lim-timing.py  2022-11-04-ga-nkl-lim-timing.py  2022-11-04-ga-trap-lim-timing.py  2022-11-04-gomea-nasbench-lim-timing.py  2022-11-04-gomea-nkl-lim-timing.py  2022-11-04-gomea-trap-lim-timing.py  2022-11-07-analyse-samples-2.ipynb  2022-11-07-ecga-gensel-nasbench-nolim.py  2022-11-14-ecga-nasbench-lim-timing-6.py  2022-11-15-analyse-samples-3.ipynb  2022-11-15-analyse-samples-4.ipynb  2022-11-15-rerun-successful-population-size.py  2022-11-17-ga-nasbench-lim-timing.py  2022-11-17-ga-nasbench-nolim.py  2022-11-22-nasbench-timing.ipynb  2022-11-24-nasbench.ipynb  2022-12-05-a-ecga-nkl.py  2022-12-05-a-ecga-trap-subset.py  2022-12-05-a-ecga-trap.py  2022-12-05-a-ga-nkl.py  2022-12-05-a-ga-trap.py  2022-12-05-a-gomea-nkl.py  2022-12-05-a-gomea-trap.py  2022-12-14-replace-ecga-run.ipynb  2022-12-15-a-ecga-trap-lim.py  2022-12-20-plotting-trap-nkl.ipynb  2023-01-05-scatterplot-dist-nasbench.ipynb  2023-01-06-ecga-nasbench-lim-timing-ext.py  2023-01-06-ga-nasbench-lim-timing-ext.py  2023-01-06-gomea-nasbench-lim-timing-ext.py  2023-01-10-imm-gomea-nasbench-lim-timing.py  2023-01-10-imm-gomea-nkl.py  (+42 more)
experiments/fast_temporal_processor/: Cargo.toml  README.md
experiments/fast_temporal_processor/src/: main.rs  quantile_heap.rs
experiments/instances/: trap__l_10__k_5.txt  trap__l_200__k_5.txt  trap__l_20__k_5.txt  trap__l_25__k_5.txt
experiments/nasbench/: .gitignore  check_simplified_configspace.py  nasbench_wrapper.py  requirements.txt  xgb-upgrade.py
experiments/results/: .gitignore  README.txt
(+1900 files in other folders)
